<resources>
    <string name="app_name">MyFirebaseApplication</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">sign up</string>
    <string name="name">Name</string>
    <string name="short_biography">Short Biography</string>
    <string name="city">Select City</string>
    <string name="error_text">something went wrong</string>
    <string name="temparature_is">Temparature is : \t\t</string>
    <string name="weather_detail">Weather Detail</string>
    <string name="pressure">pressure</string>
    <string name="humidity">Humidity</string>
    <string name="weather_description">Weather Description</string>
    <string name="temparature">Temparature</string>
    <string name="user_error">User added successfully.</string>

</resources>