<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_16dp"
        tools:context=".registration.view.RegistrationActivity">
<ImageView
    android:layout_width="@dimen/width_84dp"
    android:layout_height="@dimen/width_84dp"
    app:layout_constraintEnd_toEndOf="parent"
    android:id="@+id/ivProfile"
    android:layout_marginBottom="@dimen/margin_40dp"
    app:layout_constraintBottom_toTopOf="@+id/etName"
    app:layout_constraintStart_toStartOf="parent"/>
        <ImageView
            android:layout_width="@dimen/width_20dp"
            android:layout_height="@dimen/width_20dp"
            app:layout_constraintTop_toBottomOf="@+id/ivProfile"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:id="@+id/etName"
            android:hint="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/etEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etBiography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"

            android:hint="@string/short_biography"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etBiography" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>